// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p6-input add the class "is-static" when the readonly props is true 1`] = `
<p6-input readonly="">
  <mock:shadow-root>
    <div class="control">
      <input class="input is-static" readonly="" type="text">
    </div>
  </mock:shadow-root>
</p6-input>
`;

exports[`p6-input add the waiting class on the input container, not on the input 1`] = `
<p6-input waiting="">
  <mock:shadow-root>
    <div class="control is-loading">
      <input class="input" type="text">
    </div>
  </mock:shadow-root>
</p6-input>
`;

exports[`p6-input renders 1`] = `
<p6-input>
  <mock:shadow-root>
    <div class="control">
      <input class="input" type="text">
    </div>
  </mock:shadow-root>
</p6-input>
`;
